--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-25  Martin Baulig  <martin@ximian.com>
+
+	* backends/: Rename to backend.
+
 2006-10-24  Wade Berrier  <wberrier@novell.com>
 
 	* doc/Makefile.am: Update filelist for removed files to fix make dist
