--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-10-25  Martin Baulig  <martin@ximian.com>
 
+	* classes/AddressDomain.cs
+	(AddressDomain): Don't make this byref; add [Serializable]
+	attribute and make the .ctor take the id as argument.
+
+2006-10-25  Martin Baulig  <martin@ximian.com>
+
 	* interfaces: Renamed to interface.
 
 2006-10-25  Martin Baulig  <martin@ximian.com>
