--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-11-09  Wade Berrier  <wberrier@novell.com>
+
+	* build/Makefile.am:
+	* classes/Makefile.am:
+	* frontend/libedit/Makefile.am:
+	* interface/Makefile.am:
+	 Add/remove source files to filelistings to fix make dist
+
 2006-10-25  Martin Baulig  <martin@ximian.com>
 
 	* build/: Rename the current `Mono.Debugger.dll' into
