--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-10  Martin Baulig  <martin@ximian.com>
+
+	* classes/Debugger.cs: Don't use another appdomain for the server.
+
 2006-11-09  Wade Berrier  <wberrier@novell.com>
 
 	* build/Makefile.am:
