2006-11-15  Martin Baulig  <martin@ximian.com>
	Released version 0.31 "Ehrenbreitstein" of the Mono Debugger :-)


svn path=/trunk/debugger/; revision=67926

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-11-15  Martin Baulig  <martin@ximian.com>
+
+	Released version 0.31 "Ehrenbreitstein" of the Mono Debugger :-)
+
 2006-11-14  Wade Berrier  <wberrier@novell.com>
 
 	* ChangeLog: bump version for 0.31 tag
