--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+November 15th, 2006 - Martin Baulig
+-----------------------------------
+
+Released version 0.31 "Ehrenbreitstein" of the Mono Debugger :-)
+
+- Thanks a lot to Wade Berrier for cooking this release.
+
+- Upgraded libedit; the new version has a BSD-license without the
+  GPL-incompatible advertising clause.
+
+- We don't use a separate appdomain inside the debugger anymore.
+
 July 18th, 2006 - Martin Baulig
 -------------------------------
 
