--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-21  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Bump version number to 0.35 for the SVN version;
+	the next release will be 0.40 "Bonn".
+
 2006-11-15  Martin Baulig  <martin@ximian.com>
 
 	Released version 0.31 "Ehrenbreitstein" of the Mono Debugger :-)
