--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2006-12-21  Martin Baulig  <martin@ximian.com>
 
+	* classes/Thread.cs
+	(Thread.StepCommandResult): Renamed to `ThreadCommandResult' and
+	made public.
+	(RuntimeInvokeResult): New public class; derives from `CommandResult'.
+	(Thread.RuntimeInvoke): Make this non-blocking and return a
+	`RuntimeCommandResult'; removed the other overloaded version.
+
+2006-12-21  Martin Baulig  <martin@ximian.com>
+
 	* configure.in: Bump version number to 0.35 for the SVN version;
 	the next release will be 0.40 "Bonn".
 
