--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-12-28  Martin Baulig  <martin@ximian.com>
+
+	* backend/SingleSteppingEngine.cs
+	(Operation): Store the `SingleSteppingEngine' inside the
+	`Operation', so we don't need to pass it around as a parameter.
+
 2006-12-22  Martin Baulig  <martin@ximian.com>
 
 	* backend/MonoThreadManager.cs: The `mono' binary now contains a
