--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-12-28  Martin Baulig  <martin@ximian.com>
 
+	* classes/Process.cs
+	(Process): Replaced the `Threads' property with a GetThreads()
+	method.
+
+2006-12-28  Martin Baulig  <martin@ximian.com>
+
 	* classes/Thread.cs
 	(Thread.LastTargetEvent): New public property.
 	(CommandResult.Abort): New public method.
