--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2006-12-29  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Interpreter.cs
+	(Interpreter.IsSynchronous): Removed.
+	(Interpreter.WaitAll): New public method.
+
+	* frontend/Command.cs
+	(SteppingCommand): More work on the threading stuff.
+
+2006-12-29  Martin Baulig  <martin@ximian.com>
+
 	* classes/Thread.cs
 	(Thread): Make all the stepping operations return a
 	`ThreadCommandResult' instead of a `CommandResult'.
