--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-01-16  Martin Baulig  <martin@ximian.com>
+
+	* classes/Thread.cs (Thread.Flags): Added `AutoRun'.
+	(Thread.AutoStop): New public method.
+
+	* classes/DebuggerConfiguration.cs
+	(DebuggerConfiguration.StayInThread): New public property.
+
+	* backends/SingleSteppingEngine.cs: Correctly handle stop requests.
+
 2007-01-03  Martin Baulig  <martin@ximian.com>
 
 	* classes/Thread.cs (Thread.Flags): New public enum.
