--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-01-17  Martin Baulig  <martin@ximian.com>
 
+	* backends/ThreadServant.cs
+	(ThreadServant.Process): New public property.
+
+	* classes/TargetBinaryReader.cs
+	(TargetBinaryReader.ReadTargetAddress): New public address.
+
+2007-01-17  Martin Baulig  <martin@ximian.com>
+
 	* languages/Language.cs
 	(Language.IsManaged): New public property.
 
