--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,13 @@
 2007-01-17  Martin Baulig  <martin@ximian.com>
 
+	* classes/Thread.cs
+	(Thread.LMFAddress): New internal property.
+
 	* backends/ThreadServant.cs
-	(ThreadServant.Process): New public property.
+	(ThreadServant.Process): New internal property.
 
 	* classes/TargetBinaryReader.cs
-	(TargetBinaryReader.ReadTargetAddress): New public address.
+	(TargetBinaryReader.ReadTargetAddress): New public method.
 
 2007-01-17  Martin Baulig  <martin@ximian.com>
 
