--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-01-17  Martin Baulig  <martin@ximian.com>
 
+	* backend/arch/Architecture.cs
+	(Architecture.GetLMF): New internal method.
+
+2007-01-17  Martin Baulig  <martin@ximian.com>
+
 	* classes/Thread.cs
 	(Thread.LMFAddress): New internal property.
 
