--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2007-01-19  Martin Baulig  <martin@ximian.com>
+
+	* classes/Backtrace.cs
+	(Backtrace.Mode): New public enum.
+	(Backtrace.GetBacktrace): Added `Mode mode' argument.
+
+	* classes/Thread.cs
+	(Thread.GetBacktrace): Added `Backtrace.Mode mode' argument.
+
+	* frontend/Command.cs
+	(BacktraceCommand): Added `-managed' and `-native' arguments.
+
 2007-01-17  Martin Baulig  <martin@ximian.com>
 
 	* classes/Backtrace.cs
