--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-01-23  Martin Baulig  <martin@ximian.com>
 
+	* test/testsuite/TestMultiThread.cs: New test.
+	* test/src/TestMultiThread.cs: New test.
+
+2007-01-23  Martin Baulig  <martin@ximian.com>
+
 	* frontend/Interpreter.cs
 	(Interpreter.WaitAll): Store the threads in a Hashtable instead of
 	an ArrayList and only start each thread once.
