--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-24  Martin Baulig  <martin@ximian.com>
+
+	* test/testsuite/NUnit.cs (TestSuite..cctor): Call
+	Report.Initialize() in the .cctor rather than in the .ctor to
+	avoid a sharing violation on the logfile.
+
 2007-01-23  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/TestMultiThread.cs: New test.
