--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-01-29  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoSymbolFile.cs
+	(MonoSymbolFile.ctor): Do the GUID check here rather than passing
+	an assembly to C.MonoSymbolFile's .ctor.
+
 2007-01-25  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs
