--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-01-30  Martin Baulig  <martin@ximian.com>
+
+	* frontend/Expression.cs
+	(StructAccessExpression.GetField): Add support for consts.
+
+	* frontend/Style.cs
+	(StyleCLI.FormatMember): Add support for consts.
+
 2007-01-29  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/NUnit.cs
