--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-01  Martin Baulig  <martin@ximian.com>
+
+	* interface/Report.cs
+	(ReportWriter.PrintToConsole): New public property.
+	(ReportWriter.Print): Also print to the console if we have a
+	logfile and `PrintToConsole' is true.  We use this for the test
+	suite to suppress output to the console.
+
 2007-01-30  Martin Baulig  <martin@ximian.com>
 
 	* languages/Language.cs
