--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-01  Miguel de Icaza  <miguel@novell.com>
+
+	* frontend/Command.cs: Make it so "list -" works.
+
 2007-02-01  Martin Baulig  <martin@ximian.com>
 
 	* backend/SingleSteppingEngine.cs: Fix a race condition: if we hit
