--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,26 @@
+2007-02-08  Martin Baulig  <martin@ximian.com>
+
+	Distinguish between normal stopping and receiving a SIGSTOP in the
+	backend.
+
+	* backend/server/x86-arch.h
+	(ChildStoppedAction): Added `STOP_ACTION_INTERRUPTED'; renamed
+	`STOP_ACTION_SEND_STOPPED' to `STOP_ACTION_STOPPED'.
+
+	* backend/server/server.h
+	(ServerStatusMessageType): Added `MESSAGE_CHILD_INTERRUPTED'.
+
+	* backend/Inferior.cs
+	(Inferior.ChildEventType): Added `CHILD_INTERRUPTED'.
+
+	* backend/SingleSteppingEngine.cs: Handle `CHILD_INTERRUPTED'
+	separately; we now distinguish between stopped normally (hitting a
+	breakpoint, receiving a notification etc.) or being stopped by a
+	SIGSTOP.
+
+	* classes/TargetEvent.cs
+	(TargetEventType): Added `TargetInterrupted'.	
+
 2007-02-01  Miguel de Icaza  <miguel@novell.com>
 
 	* frontend/Command.cs: Make it so "list -" works.
