--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-12  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Require Mono >= 1.2.3.
+
 2007-02-08  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Interpreter.cs (Interpreter.WaitAll): Fix another bug.
