--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-13  Martin Baulig  <martin@ximian.com>
+
+	* test/testsuite/NUnit.cs: Run the tests in the invariant culture;
+	fixes #80360.
+
 2007-02-12  Martin Baulig  <martin@ximian.com>
 
 	* configure.in: Require Mono >= 1.2.3.
