--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-22  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoLanguageBackend.cs: Don't crash if we can't
+	find a symbol file.
+
 2007-02-20  Martin Baulig  <martin@ximian.com>
 
 	* classes/DebuggerSession.cs
