--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,21 @@
 2007-02-22  Martin Baulig  <martin@ximian.com>
 
 	* classes/Event.cs
+	(Event.IsPersistent): New public property.
+
+	* classes/Breakpoint.cs
+	(Breakpoint): Make this class abstract and split the functionality
+	into `SourceBreakpoint' and `AddressBreakpoint'.
+
+	* classes/SourceBreakpoint.cs: New file.
+	(SourceBreakpoint): New public class.
+
+	* classes/AddressBreakpoint.cs: New file.
+	(AddressBreakpoint): New public class.
+
+2007-02-22  Martin Baulig  <martin@ximian.com>
+
+	* classes/Event.cs
 	(EventType): Added `Breakpoint', `WatchRead' and `WatchWrite'.
 	(Event.Type): New public property.
 
