--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-02-27  Martin Baulig  <martin@ximian.com>
+
+	* classes/Event.cs
+	(Event.Enable): Renamed to `Activate' and made public.
+	(Event.Disable): Renamed to `Deactivate' and made public.
+	(Event.IsEnabled): New public abstract property.
+
 2007-02-23  Martin Baulig  <martin@ximian.com>
 
 	* classes/ExceptionCatchPoint.cs
