--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-27  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Command.cs
+	(ShowCommand): Make `show events' and alias for `show breakpoints'.
+
+2007-02-27  Martin Baulig  <martin@ximian.com>
+
 	* classes/Event.cs
 	(Event.Enable): Renamed to `Activate' and made public.
 	(Event.Disable): Renamed to `Deactivate' and made public.
