--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-02-27  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Command.cs
+	(BreakpointEnableCommand, BreakpointDisableCommand): Also activate
+	and deactivate the breakpoint if we have a target.
+
+2007-02-27  Martin Baulig  <martin@ximian.com>
+
 	* classes/Process.cs
 	(Process.GetFullPath): New public method; moved here from the
 	`ScriptingContext'.
