--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2007-02-28  Martin Baulig  <martin@ximian.com>
+
+	* classes/SourceInfo.cs
+	(SourceFile.FindMethod): New public method.
+
+	* classes/Process.cs
+	(Process.FindFile): New public method.
+
+	* classes/Module.cs
+	(Module.FindFile): New public method.
+
+	* classes/SourceLocation.cs
+	(SourceLocation): Allow file-line locations.
+
 2007-02-27  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Command.cs
