--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-28  Martin Baulig  <martin@ximian.com>
 
+	* classes/Process.cs
+	(Process.GetFullPath): Removed; use FindFile() instead.
+
+2007-02-28  Martin Baulig  <martin@ximian.com>
+
 	* classes/SourceInfo.cs
 	(SourceFile.FindMethod): New public method.
 
