2007-03-06  Martin Baulig  <martin@ximian.com>
	* test/testsuite/TestSession.cs: Add a new testcase.


svn path=/trunk/debugger/; revision=73822

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-03-06  Martin Baulig  <martin@ximian.com>
 
+	* test/testsuite/TestSession.cs: Add a new testcase.
+
+2007-03-06  Martin Baulig  <martin@ximian.com>
+
 	* classes/Debugger.cs
 	(Debugger.MainProcessCreatedEvent): New public event.
 
