--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2007-03-08  Massimiliano Mantione  <massi@ximian.com>
+
+	* frontend/Command.cs: Added "[un]display" and enhanced "examine".
+	* frontend/Style.cs: In StyleCLI.TargetStopped, added code to
+	show displays to the user.
+	* frontend/Displays.cs: Implemented displays.
+	* frontend/Interpreter.cs: Added the collection of displays to
+	the interpreter instance.
+	* build/Makefile.am, frontend/Makefile.am: added Displays.cs
+	* api/IStackFrame.cs: Added import to make build in Monodevelop happy.
+
 2007-03-06  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/TestSession.cs: Add a new testcase.
